# todo_app

./: DIAGNOSE_404.md  FIXING_VERCEL_404.md  README.md  TROUBLESHOOTING_VERCEL.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOYMENT_GUIDE.md  rename-folders.ps1  start-backend.ps1  test-api.ps1  test-backend.ps1  test_todo_app.py  todo_app.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  todo.db  vercel.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/src/: db.py  main.py
backend/src/api/: auth.py  todos.py
backend/src/core/: config.py  deps.py  security.py
backend/src/models/: todo.py  user.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  vercel.json
frontend/src/app/: (layout).tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/todos/: page.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  auth.ts
history/prompts/1-phase2-todo-web/: 1-create-phase2-todo-web-spec.spec.prompt.md  2-create-phase2-todo-web-plan.plan.prompt.md  3-generate-phase2-todo-web-tasks.tasks.prompt.md  4-complete-phase2-todo-web-implementation.implement.prompt.md
history/prompts/constitution/: 1-create-evolution-todo-constitution.constitution.prompt.md  2-amend-phase-tech-matrix.constitution.prompt.md
specs/1-phase2-todo-web/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+20 files in other folders)
